--- a/index.html
+++ b/index.html
@@ -56,7 +56,17 @@
     <footer>
 
     </footer>
-    <!-- CUSTOM JS link - antes del cierre del body -->
-    <script src="./JS/script.js"></script>
+     <!-- CUSTOM JS link - antes del cierre del body -->
+     <script src="./JS/script.js"></script>
+     <script src="./JS/alert.js"></script>
+     <script src="./JS/bucle.js"></script>
+     <script src="./JS/conditionals.js"></script>
+     <script src="./JS/filter.js"></script>
+     <script src="./JS/metodoConcat.js"></script>
+     <script src="./JS/metodoSlice.js"></script>
+     <script src="./JS/operators.js"></script>
+     <script src="./JS/parseInt.js"></script>
+     <script src="./JS/variables.js"></script>
+     <script src="./JS/jsSetUpjs"></script>
   </body>
 </html>
