--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <meta name="robots" content="index,follow">
     <!-- <meta name="robots" content="index,unfollow"> -->
     <!-- RESET CSS -->
-    <link rel="stylesheet" href="./CSS/reset.css" />
+    <!-- <link rel="stylesheet" href="./CSS/reset.css" /> -->
     <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="./CSS/style.css" />
+    <!-- <link rel="stylesheet" href="./CSS/style.css" /> -->
     <title>Document Title</title>
     <!-- FAVICON -->
     <link rel="shortcut icon" href="#" type="image/x-icon" />
@@ -57,6 +57,16 @@
 
     </footer>
     <!-- CUSTOM JS link - antes del cierre del body -->
-    <script src="./JS/script.js"></script>
+     <!-- <script src="./script.js"></script> -->
+     <!-- <script src="./alert.js"></script> -->
+     <!-- <script src="./bucle.js"></script> -->
+     <!-- <script src="./conditionals.js"></script> -->
+     <!-- <script src="./filter.js"></script> -->
+     <!-- <script src="./metodoConcat.js"></script> -->
+     <!-- <script src="./metodoSlice.js"></script> -->
+     <!-- <script src="./operators.js"></script> -->
+    <script src="./parseInt_number.js"></script> 
+     <!-- <script src="./variables.js"></script> -->
+     <!-- <script src="./jsSetUpjs"></script>  -->
   </body>
 </html>
