updated variables_constants branch

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <!-- <script src="./metodoSlice.js"></script> -->
       <!-- <script src="./operators.js"></script> -->
       <!-- <script src="./parseInt.js"></script> -->
-      <script src="./variables.js"></script>
+      <script src="./variables_constants.js"></script>
       <!-- <script src="./jsSetUpjs"></script> -->
   </body>
 </html>
