--- a/index.html
+++ b/index.html
@@ -56,11 +56,12 @@
     <footer>
 
     </footer>
-<<<<<<< HEAD
+
     <!-- <script src="./script.js"></script> -->
       <!-- <script src="./alert.js"></script> -->
       <!-- <script src="./bucle.js"></script> -->
-      <script src="./conditionals_if_else.js"></script>
+      <!-- <script src="./conditionals_if_else.js"></script> -->
+      <script src="./conditionals_switch_case.js"></script>
       <!-- <script src="./filter.js"></script> -->
       <!-- <script src="./metodoConcat.js"></script> -->
       <!-- <script src="./metodoSlice.js"></script> -->
