upload arrayArrayMethods branch

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
       <!-- <script src="./conditionals_if_else.js"></script> -->
       <!-- <script src="./conditionals_switch_case.js"></script> -->
       <!-- <script src="./bucle_for.js"></script> -->
-      <script src="./bucle_while.js"></script>
+      <!-- <script src="./bucle_while.js"></script> -->
+      <script src="./array_array_methods.js"></script>
       <!-- <script src="./filter.js"></script> -->
       <!-- <script src="./metodoConcat.js"></script> -->
       <!-- <script src="./metodoSlice.js"></script> -->
