uploaded regular expression branch

--- a/index.html
+++ b/index.html
@@ -56,18 +56,23 @@
     <footer>
 
     </footer>
-    <!-- CUSTOM JS link - antes del cierre del body -->
-    <script src="./JS/script.js"></script>
-    <script src="./JS/alert.js"></script>
-    <script src="./JS/bucle.js"></script>
-    <script src="./JS/conditionals.js"></script>
-    <script src="./JS/filter.js"></script>
-    <script src="./JS/metodoConcat.js"></script>
-    <script src="./JS/metodoSlice.js"></script>
-    <script src="./JS/operators.js"></script>
-    <script src="./JS/parseInt.js"></script>
-    <script src="./JS/variables.js"></script>
-    <script src="./JS/jsSetUpjs"></script>
+     <!-- <script src="./script.js"></script> -->
+      <!-- <script src="./alert.js"></script> -->
+      <!-- <script src="./bucle.js"></script> -->
+      <!-- <script src="./conditionals_if_else.js"></script> -->
+      <!-- <script src="./conditionals_switch_case.js"></script> -->
+      <!-- <script src="./bucle_for.js"></script> -->
+      <!-- <script src="./bucle_while.js"></script> -->
+      <!-- <script src="./array_array_methods.js"></script> -->
+      <script src="./regularExpression_regEx.js"></script>
+      <!-- <script src="./filter.js"></script> -->
+      <!-- <script src="./metodoConcat.js"></script> -->
+      <!-- <script src="./metodoSlice.js"></script> -->
+      <!-- <script src="./operators.js"></script> -->
+      <!-- <script src="./parseInt.js"></script> -->
+      <!-- <script src="./variables_constants.js"></script> -->
+      <!-- <script src="./jsSetUpjs"></script> -->
+      <!-- <script src="./functions.js"></script> -->
     
   </body>
 </html>
