--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <meta name="robots" content="index,follow">
     <!-- <meta name="robots" content="index,unfollow"> -->
     <!-- RESET CSS -->
-    <link rel="stylesheet" href="./CSS/reset.css" />
+    <!-- <link rel="stylesheet" href="./CSS/reset.css" /> -->
     <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="./CSS/style.css" />
+    <!-- <link rel="stylesheet" href="./CSS/style.css" /> -->
     <title>Document Title</title>
     <!-- FAVICON -->
     <link rel="shortcut icon" href="#" type="image/x-icon" />
